[package]
name = "cfb_time_puller_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-files = "0.6"
actix-cors = "0.6.2"
rustls = "0.20.6"
reqwest = {version = "0.11.11", features = ["json"] }
serde = {version = "1.0.144", features = ["derive"]}
serde_json = { version = "1.0.85"}
time = "0.3.14"
rustls-pemfile = "1"